--- a/Fitness-Equipment-and-Accessories-Server/vercel.json
+++ b/Fitness-Equipment-and-Accessories-Server/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "./index.js",
+            "src": "/index.js",
             "use": "@vercel/node"
         }
     ],
@@ -10,14 +10,7 @@
         {
             "src": "/(.*)",
             "dest": "/",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
         }
     ]
 }
