--- a/Fitness-Equipment-and-Accessories-Client/package.json
+++ b/Fitness-Equipment-and-Accessories-Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitness-equipment-and-accessories-client",
+  "name": "shadcn-template-with-rtk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,25 +10,48 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.6",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.4",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.399.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
-    "sort-by": "^1.2.0",
-    "swiper": "^11.1.4"
+    "react-resizable-panels": "^2.0.23",
+    "react-responsive-masonry": "^2.3.0",
+    "react-router-dom": "^6.26.1",
+    "react-sweetalert2": "^0.6.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
